# DuckBucks

./: .gitignore  CMakeLists.txt  COPYING  Dockerfile  Dockerfile.gui  INSTALL  README.md  REQUIREMENTS.txt  bitcoin-qt.pro  check_bdb.sh  check_permissions.sh  create_mw_appimage.sh  duckbucks origin story  fix_permissions.sh  install_bdb.sh  install_deps.sh  start_duckbucks.sh  verify_deps.sh
contrib/bitrpc/: bitrpc.py
contrib/gitian-descriptors/: README  gitian-win32.yml  gitian.yml
contrib/gitian-downloader/: coblee-key.pgp
contrib/macdeploy/: fancy.plist  macdeployqtplus
doc/: Doxyfile  README.md  README_windows.txt  Tor.txt  build-msw.md  build-osx.md  build-unix.md  coding.md  readme-qt.rst  release-notes.md  release-process.md  unit-tests.md
duckbucks-build/: Dockerfile.gui  build_log.txt
share/: setup.nsi
share/qt/: Info.plist  clean_mac_info_plist.py
src/: alert.cpp  base58.h  bignum.h  bitcoinrpc.cpp  blockchain.cpp  blockchain.h  checkpoints.cpp  crypter.cpp  crypter.h  crypto.h  debug.h  debug_main.cpp  init.cpp  key.cpp  key.h  main.cpp  main.h  makefile.linux-mingw  makefile.mingw  makefile.osx  makefile.unix  mimblewimble.cpp  mimblewimble.h  mimblewimble_init.cpp  mimblewimble_init.h  mimblewimble_wallet.cpp  mimblewimble_wallet.h  net.cpp  netbase.cpp  network.cpp  network.h  rpcblockchain.cpp  rpcdump.cpp  rpcmimblewimble.cpp  rpcmining.cpp  rpcrawtransaction.cpp  rpcwallet.cpp  script.h  test_mimblewimble.cpp  util.cpp
src/network/: message.cpp  message.h  network.cpp  network.h  peer.cpp  peer.h
src/qt/: aboutdialog.cpp  addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  editaddressdialog.cpp  guiutil.cpp  mimblewimbledialog.cpp  mimblewimbledialog.h  optionsdialog.cpp  paymentserver.cpp  qrcodedialog.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  splashscreen.cpp
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  mimblewimbledialog.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  sendcoinsdialog.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gu_IN.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_nb.ts  bitcoin_nl.ts  bitcoin_pl.ts  bitcoin_pt_BR.ts  bitcoin_pt_PT.ts  bitcoin_ro_RO.ts  bitcoin_ru.ts  bitcoin_sk.ts  (+7 more)
src/qt/res/: bitcoin-qt.rc
src/qt/test/: uritests.cpp
src/test/: test_bitcoin.cpp  transaction_tests.cpp
tests/: test_framework.cpp
